syntax = "proto3";

package ru.sinvic.server;

option java_multiple_files = true;

message InnerObject {
  int32 requestId = 1;
  string text = 2;
}

message MessageObject {
  int32 requestId = 1;
  string uuid = 2;
  bool randomBoolean = 3;
  string text = 4;
  InnerObject innerObject = 5;
}

message Empty {}

service MessageService {
  rpc getMessage (Empty) returns (MessageObject);
}
